{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 3162,
  "lineage": "6d397b9f-a514-da34-5dd6-74102aa188ff",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.bigip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mgmt",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ae3b13aa703f74a9",
            "domain": "vpc",
            "id": "eipalloc-0a728bd9abffd0352",
            "network_interface": "eni-033817b1a6337df0d",
            "private_dns": "ip-10-0-0-11.us-west-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-44-241-61-254.us-west-2.compute.amazonaws.com",
            "public_ip": "44.241.61.254",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-mgmt-eip-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.bigip.aws_network_interface.mgmt",
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.elk",
      "mode": "managed",
      "type": "aws_instance",
      "name": "elk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1ab2d66f996cd4b",
            "arn": "arn:aws:ec2:us-west-2:652038280167:instance/i-01a71fd07a778c015",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a71fd07a778c015",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "ec2keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-075d8963035ff8361",
            "private_dns": "ip-10-0-0-96.us-west-2.compute.internal",
            "private_ip": "10.0.0.96",
            "public_dns": "ec2-54-245-19-73.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.19.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-057926b119270d659",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfc9f470df43e053",
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-elk-4512",
              "Owner": "udf",
              "Role": "elk",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b7e33071d54382b",
              "sg-01f24b1b6690e9b8e",
              "sg-08274363ae073db9c",
              "sg-0a0fd3bb01eb56b08"
            ]
          },
          "dependencies": [
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this",
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.kibana_sg.module.sg.aws_security_group.this",
            "module.security.module.kibana_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip",
      "mode": "managed",
      "type": "aws_instance",
      "name": "f5_bigip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042ff32d1f7677784",
            "arn": "arn:aws:ec2:us-west-2:652038280167:instance/i-029eb970884ac2144",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udf-bigip-profile-4512",
            "id": "i-029eb970884ac2144",
            "instance_state": "running",
            "instance_type": "m4.large",
            "ipv6_address_count": 0,
            "key_name": "ec2keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-033817b1a6337df0d"
              }
            ],
            "primary_network_interface_id": "eni-033817b1a6337df0d",
            "private_dns": "ip-10-0-0-11.us-west-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-44-241-61-254.us-west-2.compute.amazonaws.com",
            "public_ip": "44.241.61.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 228,
                "volume_id": "vol-08c754d5aa9ded6d9",
                "volume_size": 76,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfc9f470df43e053",
            "tags": {
              "CWLogGroup": "udf-f5-bigip-cloudwatch-lg-4512",
              "CWLogStream": "udf-f5-bigip-cloudwatch-ls-4512",
              "Environment": "forum-demo",
              "Name": "udf-f5-bigip-4512-0",
              "Owner": "udf",
              "Role": "bigip",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b7e33071d54382b",
              "sg-032117b09e09b0493",
              "sg-03bb05cb09991cca4",
              "sg-08274363ae073db9c"
            ]
          },
          "dependencies": [
            "aws_secretsmanager_secret.bigip",
            "module.bigip.aws_eip.mgmt",
            "module.bigip.aws_iam_instance_profile.bigip_profile",
            "module.bigip.aws_iam_role.bigip_role",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.private",
            "module.bigip.aws_network_interface.public",
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.juiceshop",
      "mode": "managed",
      "type": "aws_instance",
      "name": "juiceshop",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1ab2d66f996cd4b",
            "arn": "arn:aws:ec2:us-west-2:652038280167:instance/i-02e72eee9151acd31",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e72eee9151acd31",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-02f29843321257437",
            "private_dns": "ip-10-0-0-72.us-west-2.compute.internal",
            "private_ip": "10.0.0.72",
            "public_dns": "ec2-52-37-28-253.us-west-2.compute.amazonaws.com",
            "public_ip": "52.37.28.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d21227c540cfb366",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfc9f470df43e053",
            "tags": {
              "Application": "NginxWebServer",
              "Color": "orange",
              "Environment": "forum-demo",
              "Name": "udf-juiceshop-orange-4512",
              "Owner": "udf",
              "Role": "juiceshop",
              "Tenant": "customer1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b7e33071d54382b",
              "sg-08274363ae073db9c",
              "sg-0d4675b7e28b03a76"
            ]
          },
          "dependencies": [
            "module.security.module.juiceshop_sg.module.sg.aws_security_group.this",
            "module.security.module.juiceshop_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1ab2d66f996cd4b",
            "arn": "arn:aws:ec2:us-west-2:652038280167:instance/i-0fea0567a8dceefdd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fea0567a8dceefdd",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-067d1f35b1ecf78df",
            "private_dns": "ip-10-0-0-17.us-west-2.compute.internal",
            "private_ip": "10.0.0.17",
            "public_dns": "ec2-54-191-172-189.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.172.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04e49608955ae06c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfc9f470df43e053",
            "tags": {
              "Application": "NginxWebServer",
              "Autodiscovery": "true",
              "Color": "orange",
              "Environment": "forum-demo",
              "Name": "udf-webserver-orange-4512",
              "Owner": "udf",
              "Role": "webserver",
              "Tenant": "customer1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b7e33071d54382b",
              "sg-03bb05cb09991cca4"
            ]
          },
          "dependencies": [
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1ab2d66f996cd4b",
            "arn": "arn:aws:ec2:us-west-2:652038280167:instance/i-0530fef92963ccd9d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0530fef92963ccd9d",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0c3d7eb8f31b08116",
            "private_dns": "ip-10-0-0-212.us-west-2.compute.internal",
            "private_ip": "10.0.0.212",
            "public_dns": "ec2-54-200-190-223.us-west-2.compute.amazonaws.com",
            "public_ip": "54.200.190.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04d6d6af4855e6a82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfc9f470df43e053",
            "tags": {
              "Application": "NginxWebServer",
              "Autodiscovery": "true",
              "Color": "blue",
              "Environment": "forum-demo",
              "Name": "udf-webserver-blue-4512",
              "Owner": "udf",
              "Role": "webserver",
              "Tenant": "customer1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b7e33071d54382b",
              "sg-03bb05cb09991cca4"
            ]
          },
          "dependencies": [
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:internet-gateway/igw-0593f27649e0d3e3f",
            "id": "igw-0593f27649e0d3e3f",
            "owner_id": "652038280167",
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-igw-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.bigip",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-033817b1a6337df0d",
            "mac_address": "06:cf:72:52:5e:f7",
            "private_dns_name": "ip-10-0-0-11.us-west-2.compute.internal",
            "private_ip": "10.0.0.11",
            "private_ips": [
              "10.0.0.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01b7e33071d54382b",
              "sg-032117b09e09b0493",
              "sg-03bb05cb09991cca4",
              "sg-08274363ae073db9c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfc9f470df43e053",
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-mgmt-intf-4512",
              "Owner": "udf",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.bigip",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0593f27649e0d3e3f",
            "id": "r-rtb-0625b260f3e08ed8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0625b260f3e08ed8d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0625b260f3e08ed8d",
            "owner_id": "652038280167",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-pub-rt-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0922d3bcd075f97f2",
            "route_table_id": "rtb-0625b260f3e08ed8d",
            "subnet_id": "subnet-0bfc9f470df43e053"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:security-group/sg-08274363ae073db9c",
            "description": "Security group for SSH ports open within VPC",
            "egress": [],
            "id": "sg-08274363ae073db9c",
            "ingress": [],
            "name": "udf-ssh-sg-4512-20201005021844740700000002",
            "name_prefix": "udf-ssh-sg-4512-",
            "owner_id": "652038280167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-ssh-sg-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:security-group/sg-01b7e33071d54382b",
            "description": "Security group for web-server with HTTP ports",
            "egress": [],
            "id": "sg-01b7e33071d54382b",
            "ingress": [],
            "name": "udf-webserver-sg-4512-20201005021844742200000003",
            "name_prefix": "udf-webserver-sg-4512-",
            "owner_id": "652038280167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-webserver-sg-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:security-group/sg-0d4675b7e28b03a76",
            "description": "Security group for juiceshop",
            "egress": [],
            "id": "sg-0d4675b7e28b03a76",
            "ingress": [],
            "name": "udf-juiceshop-sg-4512-20201005021844742600000007",
            "name_prefix": "udf-juiceshop-sg-4512-",
            "owner_id": "652038280167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-juiceshop-sg-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:security-group/sg-03bb05cb09991cca4",
            "description": "Security group for web-server with HTTPS ports",
            "egress": [],
            "id": "sg-03bb05cb09991cca4",
            "ingress": [],
            "name": "udf-webserver-secure-sg-4512-20201005021844740700000001",
            "name_prefix": "udf-webserver-secure-sg-4512-",
            "owner_id": "652038280167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-webserver-secure-sg-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:security-group/sg-0a0fd3bb01eb56b08",
            "description": "Security group for Elasticsearch",
            "egress": [],
            "id": "sg-0a0fd3bb01eb56b08",
            "ingress": [],
            "name": "udf-elasticsearch-sg-4512-20201005021844742600000006",
            "name_prefix": "udf-elasticsearch-sg-4512-",
            "owner_id": "652038280167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-elasticsearch-sg-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:security-group/sg-032117b09e09b0493",
            "description": "Security group for BIG-IP MGMT Interface",
            "egress": [],
            "id": "sg-032117b09e09b0493",
            "ingress": [],
            "name": "udf-bigip-mgmt-sg-4512-20201005021844742300000004",
            "name_prefix": "udf-bigip-mgmt-sg-4512-",
            "owner_id": "652038280167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-bigip-mgmt-sg-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:security-group/sg-01f24b1b6690e9b8e",
            "description": "Security group for Kibana",
            "egress": [],
            "id": "sg-01f24b1b6690e9b8e",
            "ingress": [],
            "name": "udf-kibana-sg-4512-20201005021844742200000005",
            "name_prefix": "udf-kibana-sg-4512-",
            "owner_id": "652038280167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-kibana-sg-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-232053976",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08274363ae073db9c",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3617784944",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01b7e33071d54382b",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-4283665152",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d4675b7e28b03a76",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.security.module.juiceshop_sg.module.sg.aws_security_group.this",
            "module.security.module.juiceshop_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-250823976",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03bb05cb09991cca4",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3588406279",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a0fd3bb01eb56b08",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this",
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2264035433",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-032117b09e09b0493",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2783892449",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01f24b1b6690e9b8e",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.security.module.kibana_sg.module.sg.aws_security_group.this",
            "module.security.module.kibana_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3843959425",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08274363ae073db9c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-58708158",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01b7e33071d54382b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Grafana Dashboard",
            "from_port": 3000,
            "id": "sgrule-4125867824",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d4675b7e28b03a76",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.juiceshop_sg.module.sg.aws_security_group.this",
            "module.security.module.juiceshop_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1295768539",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03bb05cb09991cca4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Elasticsearch Java interface",
            "from_port": 9300,
            "id": "sgrule-3996112279",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0fd3bb01eb56b08",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9300,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this",
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Elasticsearch REST interface",
            "from_port": 9200,
            "id": "sgrule-131439569",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0fd3bb01eb56b08",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9200,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this",
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 8443,
            "id": "sgrule-1927213131",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032117b09e09b0493",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Kibana Web Interface",
            "from_port": 5601,
            "id": "sgrule-4072465094",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f24b1b6690e9b8e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5601,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.kibana_sg.module.sg.aws_security_group.this",
            "module.security.module.kibana_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-3870161232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08274363ae073db9c",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.ssh_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-11514456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01b7e33071d54382b",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.web_server_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-3858965058",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d4675b7e28b03a76",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.juiceshop_sg.module.sg.aws_security_group.this",
            "module.security.module.juiceshop_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-2300272888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03bb05cb09991cca4",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.web_server_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-4100955244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a0fd3bb01eb56b08",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this",
            "module.security.module.elasticsearch_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-1331480508",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-032117b09e09b0493",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this",
            "module.security.module.bigip_mgmt_secure_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-1574536131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01f24b1b6690e9b8e",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.security.module.kibana_sg.module.sg.aws_security_group.this",
            "module.security.module.kibana_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.ssh_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.juiceshop_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.web_server_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.elasticsearch_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.bigip_mgmt_secure_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security.module.kibana_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:subnet/subnet-0bfc9f470df43e053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0bfc9f470df43e053",
            "map_public_ip_on_launch": true,
            "owner_id": "652038280167",
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-pub-subnet-4512",
              "Owner": "udf",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051d079ba29be0931"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:652038280167:vpc/vpc-051d079ba29be0931",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05dea1e09f0ec2a83",
            "default_route_table_id": "rtb-00a6d28727a005b63",
            "default_security_group_id": "sg-03fedc1f5a69a314d",
            "dhcp_options_id": "dopt-067eb47cb66fc87a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-051d079ba29be0931",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00a6d28727a005b63",
            "owner_id": "652038280167",
            "tags": {
              "Environment": "forum-demo",
              "Name": "udf-vpc-4512",
              "Owner": "udf",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "access_analyzer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "acm_pca",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "auto_scaling_plans",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "datasync",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ebs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_autoscaling",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elastic_inference_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk_health",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "emr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "qldb_session",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ses",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "workspaces",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}